# ungoogled-chromium-archlinux

./: .cirrus.yml  .cirrus_Dockerfile  .gitignore  .gitmodules  0002-add-hevc-ffmpeg-decoder-parser.patch  0002-change-libavcodec-header.patch  0002-enable-hevc-ffmpeg-decoding.patch  LICENSE  PKGBUILD  PKGBUILD.in  README.md  REUSE.toml  aur-version.git  fix-intel-vaapi-wayland.patch  fix-libva-redef.patch  flags.archlinux.gn  generate_pkgbuild.py  ozone-add-va-api-support-to-wayland.patch  wayland-egl.patch  xproto-fix-underflow-in-Fp1616ToDouble.patch
.github/actions/stage/: action.yml  index.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml  check_pkgbuild.yml  chromium.json  debug.sh  get_chromium_version  main.yml  obs-upload.bash  obs-upload.yml  release.yml  testing.yml
.github/workflows/container/: Dockerfile  run.sh
aur/: PKGBUILD
devutils/: set_quilt_vars.sh  update_submodule.sh
patches/: series
patches/archlinux/fixes/: add-missing-include-for-unique_ptr.patch  address_rewriter_re2_fix.patch  chromium-gcc-incomplete-type.patch  chromium-include.patch  cros-search-service-include.patch  dns_util-make-DohUpgradeEntry-non-const.patch  fix-browser-frame-view-not-getting-a-relayout.patch  fix-wrong-string-initialization-in-LinkedHashSet.patch  gpu_mojo_media_client.patch  icu65.patch  icu67.patch  move-RemoteTreeNode-declaration.patch  one_euro_filter.patch  remove-verbose-logging-in-local-unique-font-matching.patch  unbundle-libxml.patch  vaapi.patch  vaapi_picture_tfp.patch  web_time_range.patch  widevine-other-locations.patch
patches/archlinux/system/: harfbuzz.patch  icu.patch  jsoncpp.patch  lcms.patch  zlib.patch
patches/debian_buster/disable/: font-tests.patch  swiftshader.patch
patches/debian_buster/fixes/: vaapi.patch
patches/debian_buster/system/: convertutf.patch  event.patch  jpeg.patch  nspr.patch  openjpeg.patch
patches/debian_buster/warnings/: printf.patch
patches/inox-patchset/: chromium-color_utils-use-std-sqrt.patch  chromium-fix-window-flash-for-some-WMs.patch  chromium-glibc-2.29.patch  chromium-system-icu.patch  chromium-vaapi.patch  libstdc-do-not-assume-unique_ptr-has-ostream-operator.patch
