blink_symbol_level=0
clang_use_chrome_plugins=false
closure_compile=false
custom_toolchain="//build/toolchain/linux/unbundle:default"
enable_ac3_eac3_audio_demuxing=true
enable_hangout_services_extension=false
enable_hevc_demuxing=true
enable_iterator_debugging=false
enable_mdns=false
enable_mse_mpeg2ts_stream_parser=true
enable_nacl=false
enable_nacl_nonsfi=false
enable_one_click_signin=false
enable_reading_list=false
enable_remoting=false
enable_reporting=false
enable_service_discovery=false
enable_swiftshader=false
enable_widevine=true
exclude_unwind_tables=true
fatal_linker_warnings=false
ffmpeg_branding="ChromeOS"
fieldtrial_testing_like_official_build=true
gold_path=""
goma_dir=""
google_api_key=""
google_default_client_id=""
google_default_client_secret=""
host_toolchain="//build/toolchain/linux/unbundle:default"
is_clang=true
is_debug=false
is_official_build=true
link_pulseaudio=true
linux_use_bundled_binutils=false
optimize_webui=false
proprietary_codecs=true
safe_browsing_mode=0
symbol_level=0
treat_warnings_as_errors=false
use_allocator="none"
use_cups=true
use_custom_libcxx=false
use_gio=true
use_gnome_keyring=false
use_jumbo_build=true
use_kerberos=false
use_libjpeg_turbo=true
use_lld=true
use_official_google_api_keys=false
use_openh264=false
use_ozone=false
use_pulseaudio=true
use_sysroot=false
use_system_freetype=true
use_system_harfbuzz=true
use_system_lcms2=true
use_system_libjpeg=true
use_system_zlib=true
use_unofficial_version_number=false
use_vaapi=true
