blink_symbol_level=0
custom_toolchain="//build/toolchain/linux/unbundle:default"
enable_iterator_debugging=false
enable_swiftshader=false
fatal_linker_warnings=false
ffmpeg_branding="ChromeOS"
gold_path=""
goma_dir=""
host_toolchain="//build/toolchain/linux/unbundle:default"
icu_use_data_file=false
is_clang=true
is_debug=false
link_pulseaudio=true
linux_use_bundled_binutils=false
proprietary_codecs=true
symbol_level=0
use_cups=true
use_custom_libcxx=false
use_gio=true
use_gnome_keyring=false
use_kerberos=false
use_libjpeg_turbo=true
use_lld=true
use_openh264=false
use_pulseaudio=true
use_sysroot=false
use_system_freetype=true
use_system_harfbuzz=true
use_system_lcms2=true
use_system_libjpeg=true
use_system_zlib=true
use_vaapi=true
